# TinyBit-esp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
components/st7789/: st7789.c  st7789.h
main/: CMakeLists.txt  idf_component.yml  main.c  testimg.c
main/SD_Card/: SD_SPI.c  SD_SPI.h
main/st7789/: st7789.c  st7789.h
main/tinybit/: audio.c  audio.h  font.c  font.h  graphics.c  graphics.h  input.c  input.h  lua_functions.c  lua_functions.h  memory.c  memory.h  tinybit.c  tinybit.h
main/tinybit/assets/: basic_font.h
